ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-openshift
spec:
  rules:
  - host: example-kc-service-postgres1.apps.micatscale.ntnxlab.local 
    http:
      paths:
      - backend:
          # Forward to a Service called 'hello-openshift'
          service:
            name: example-kc-service 
            port:
              number: 8080
        path: /
        pathType: Exact
